--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>event-store</module>
         <module>courses</module>
         <module>violations</module>
     </modules>
